// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Same generated mock file 1`] = `
"/**
 * Automatically generated by expo-type-information.
 * 
 * This autogenerated file provides a mock for native Expo module,
 * and works out of the box with the expo jest preset.
 *  */


type UnresolvedType = any;
type SomeParametrizedType<T0, T1> = any;
type URL = any;


type TestRecord = {
    basicString: string;
    basicStringInitialized: string;
    basicIntInferred: number;
    basicDoubleInferred: number;
    basicStringInferred: string;
    enumInferred: TestEnum;
    complexEnumInferred: TestEnum;
    recordInferred: TestRecord2;
    optionalInt?: number;
    letDoubleBinding: number;
    fieldWithoutAnnotation: number;
};
type TestRecord2 = {
    field1: number;
    field2: string;
};


enum TestEnum {
    simpleCase,
    multipleCases1,
    multipleCases2,
    caseWithArgs1,
    caseWithArgs2
}


export function SimpleFunction(a: number, b: number): number { return 0; }
export function TestUntypedFunction(): UnresolvedType /*The type couldn't be resolved automatically.*/ { return; }
export function TestArrays(a: number[]): string[][] { return []; }
export function TestDictionaries(a: {
    [key: number]: string;
}, b: {
    [key: number]: {
        [key: number]: string;
    };
}): any { }
export function TestParametrizedTypes(a: SomeParametrizedType<number | string, Map<Set<number>, Set<number> | Set<string>>>): string { return ""; }
export function TestTypeCombinations(a: number[][][]): (string | {
    [key: number]: string;
})[][] { return []; }
export function TestFunctionReturningRecord(): TestRecord { return { basicString: "", basicStringInitialized: "", basicIntInferred: 0, basicDoubleInferred: 0, basicStringInferred: "", enumInferred: TestEnum.simpleCase, complexEnumInferred: TestEnum.simpleCase, recordInferred: { field1: 0, field2: "" }, optionalInt: 0, letDoubleBinding: 0, fieldWithoutAnnotation: 0 }; }
export function TestFunctionReturningEnum(): TestEnum { return TestEnum.simpleCase; }
export async function TestSimpleAsyncFunction(a: string, b: string): Promise<string> { return ""; }
export class TestClassWithConstructor {
    constructor(a: number) { }
}
export class TestBasicClass {
    async TestAsyncFunction(a: number): Promise<string> { return ""; }
    constructor(a: number, b: string, c: string | TestRecord) { }
}
export class TestEmptyClass {
}
export type ExpoWebViewProps = {
    testProp: URL;
    onEvent1: (event: any) => void;
    onEvent2: (event: any) => void;
    onEvent3: (event: any) => void;
    onEvent4: (event: any) => void;
};
export function ExpoWebView(props: ExpoWebViewProps) { }
"
`;

exports[`Same generated mock file JS 1`] = `
"/**
 * Automatically generated by expo-type-information.
 *
 * This autogenerated file provides a mock for native Expo module,
 * and works out of the box with the expo jest preset.
 *  */
var TestEnum;
(function (TestEnum) {
    TestEnum[TestEnum["simpleCase"] = 0] = "simpleCase";
    TestEnum[TestEnum["multipleCases1"] = 1] = "multipleCases1";
    TestEnum[TestEnum["multipleCases2"] = 2] = "multipleCases2";
    TestEnum[TestEnum["caseWithArgs1"] = 3] = "caseWithArgs1";
    TestEnum[TestEnum["caseWithArgs2"] = 4] = "caseWithArgs2";
})(TestEnum || (TestEnum = {}));
export function SimpleFunction(a, b) { return 0; }
export function TestUntypedFunction() { return; }
export function TestArrays(a) { return []; }
export function TestDictionaries(a, b) { }
export function TestParametrizedTypes(a) { return ""; }
export function TestTypeCombinations(a) { return []; }
export function TestFunctionReturningRecord() { return { basicString: "", basicStringInitialized: "", basicIntInferred: 0, basicDoubleInferred: 0, basicStringInferred: "", enumInferred: TestEnum.simpleCase, complexEnumInferred: TestEnum.simpleCase, recordInferred: { field1: 0, field2: "" }, optionalInt: 0, letDoubleBinding: 0, fieldWithoutAnnotation: 0 }; }
export function TestFunctionReturningEnum() { return TestEnum.simpleCase; }
export async function TestSimpleAsyncFunction(a, b) { return ""; }
export class TestClassWithConstructor {
    constructor(a) { }
}
export class TestBasicClass {
    async TestAsyncFunction(a) { return ""; }
    constructor(a, b, c) { }
}
export class TestEmptyClass {
}
export function ExpoWebView(props) { }
"
`;

exports[`Same generated module file 1`] = `
"/**
 * Automatically generated by expo-type-information.
 *
 * This autogenerated file provides TS types for native Expo module or view,
 * and works out of the box with local native modules.
 *  */

import { NativeModule } from 'expo';

type UnresolvedType = any;
type SomeParametrizedType<T0, T1> = any;
type URL = any;

type TestRecord = {
  basicString: string;
  basicStringInitialized: string;
  basicIntInferred: number;
  basicDoubleInferred: number;
  basicStringInferred: string;
  enumInferred: TestEnum;
  complexEnumInferred: TestEnum;
  recordInferred: TestRecord2;
  optionalInt?: number;
  letDoubleBinding: number;
  fieldWithoutAnnotation: number;
};
type TestRecord2 = {
  field1: number;
  field2: string;
};

enum TestEnum {
  simpleCase,
  multipleCases1,
  multipleCases2,
  caseWithArgs1,
  caseWithArgs2
}

export declare class TestClassWithConstructor {
  constructor(a: number);
}
export declare class TestBasicClass {
  TestAsyncFunction(a: number): Promise<string>;
  readonly TestIntProperty: number;
  readonly TestEitherProperty: number | string;
  readonly TestEnumProperty: TestEnum;
  readonly TestRecordProperty: TestRecord2;
  constructor(a: number, b: string, c: string | TestRecord);
}
export declare class TestEmptyClass {}

export declare class TestModule extends NativeModule {
  readonly StringConstant: number;
  readonly IntConstant: number;
  readonly UntypedConstant: UnresolvedType /*The type couldn't be resolved automatically.*/;
  SimpleFunction(a: number, b: number): number;
  TestUntypedFunction(): UnresolvedType /*The type couldn't be resolved automatically.*/;
  TestArrays(a: number[]): string[][];
  TestDictionaries(
    a: {
      [key: number]: string;
    },
    b: {
      [key: number]: {
        [key: number]: string;
      };
    }
  ): any;
  TestParametrizedTypes(
    a: SomeParametrizedType<number | string, Map<Set<number>, Set<number> | Set<string>>>
  ): string;
  TestTypeCombinations(a: number[][][]): (
    | string
    | {
        [key: number]: string;
      }
  )[][];
  TestFunctionReturningRecord(): TestRecord;
  TestFunctionReturningEnum(): TestEnum;
  TestSimpleAsyncFunction(a: string, b: string): Promise<string>;
  TestClassWithConstructor: typeof TestClassWithConstructor;
  TestBasicClass: typeof TestBasicClass;
  TestEmptyClass: typeof TestEmptyClass;
}

const _default: TestModule;
export default _default;
"
`;

exports[`Same generated view file 1`] = `
"/**
 * Automatically generated by expo-type-information.
 *
 * This autogenerated file provides TS types for native Expo module or view,
 * and works out of the box with local native modules.
 *  */

import { SharedObject } from 'expo';

import { ViewProps } from 'react-native';

type UnresolvedType = any;
type SomeParametrizedType<T0, T1> = any;
type URL = any;

type ExpoWebViewProps = {
  testProp: URL;
  onEvent1: (event: any) => void;
  onEvent2: (event: any) => void;
  onEvent3: (event: any) => void;
  onEvent4: (event: any) => void;
};

const _default: React.JSXElementConstructor<ExpoWebViewProps>;
export default _default;
"
`;

exports[`Same type information 1`] = `
{
  "declaredTypeIdentifiers": Set {
    "TestEnum",
    "TestRecord",
    "TestRecord2",
    "TestClassWithConstructor",
    "TestBasicClass",
    "TestEmptyClass",
  },
  "enums": [
    {
      "cases": [
        "simpleCase",
        "multipleCases1",
        "multipleCases2",
        "caseWithArgs1",
        "caseWithArgs2",
      ],
      "name": "TestEnum",
    },
  ],
  "functions": [],
  "moduleClasses": [
    {
      "asyncFunctions": [
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
            {
              "name": "b",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
          ],
          "name": "TestSimpleAsyncFunction",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 1,
          },
        },
      ],
      "classes": [
        {
          "asyncMethods": [],
          "constructor": {
            "arguments": [
              {
                "name": "a",
                "type": {
                  "kind": 0,
                  "type": 2,
                },
              },
            ],
          },
          "methods": [],
          "name": "TestClassWithConstructor",
          "properties": [],
        },
        {
          "asyncMethods": [
            {
              "arguments": [
                {
                  "name": "a",
                  "type": {
                    "kind": 0,
                    "type": 2,
                  },
                },
              ],
              "name": "TestAsyncFunction",
              "parameters": [],
              "returnType": {
                "kind": 0,
                "type": 1,
              },
            },
          ],
          "constructor": {
            "arguments": [
              {
                "name": "a",
                "type": {
                  "kind": 0,
                  "type": 2,
                },
              },
              {
                "name": "b",
                "type": {
                  "kind": 0,
                  "type": 1,
                },
              },
              {
                "name": "c",
                "type": {
                  "kind": 2,
                  "type": {
                    "name": "Either",
                    "types": [
                      {
                        "kind": 0,
                        "type": 1,
                      },
                      {
                        "kind": 1,
                        "type": "TestRecord",
                      },
                    ],
                  },
                },
              },
            ],
          },
          "methods": [],
          "name": "TestBasicClass",
          "properties": [
            {
              "name": "TestIntProperty",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "name": "TestEitherProperty",
              "type": {
                "kind": 2,
                "type": {
                  "name": "Either",
                  "types": [
                    {
                      "kind": 0,
                      "type": 2,
                    },
                    {
                      "kind": 0,
                      "type": 1,
                    },
                  ],
                },
              },
            },
            {
              "name": "TestEnumProperty",
              "type": {
                "kind": 1,
                "type": "TestEnum",
              },
            },
            {
              "name": "TestRecordProperty",
              "type": {
                "kind": 1,
                "type": "TestRecord2",
              },
            },
          ],
        },
        {
          "asyncMethods": [],
          "constructor": null,
          "methods": [],
          "name": "TestEmptyClass",
          "properties": [],
        },
      ],
      "constants": [
        {
          "name": "StringConstant",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "IntConstant",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "UntypedConstant",
          "type": {
            "kind": 0,
            "type": 6,
          },
        },
      ],
      "constructor": null,
      "events": [],
      "functions": [
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "name": "b",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
          ],
          "name": "SimpleFunction",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "arguments": [],
          "name": "TestUntypedFunction",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 6,
          },
        },
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 5,
                "type": {
                  "kind": 0,
                  "type": 2,
                },
              },
            },
          ],
          "name": "TestArrays",
          "parameters": [],
          "returnType": {
            "kind": 5,
            "type": {
              "kind": 5,
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
          },
        },
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 6,
                "type": {
                  "key": {
                    "kind": 0,
                    "type": 2,
                  },
                  "value": {
                    "kind": 0,
                    "type": 1,
                  },
                },
              },
            },
            {
              "name": "b",
              "type": {
                "kind": 6,
                "type": {
                  "key": {
                    "kind": 0,
                    "type": 2,
                  },
                  "value": {
                    "kind": 6,
                    "type": {
                      "key": {
                        "kind": 0,
                        "type": 2,
                      },
                      "value": {
                        "kind": 0,
                        "type": 1,
                      },
                    },
                  },
                },
              },
            },
          ],
          "name": "TestDictionaries",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 0,
          },
        },
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 3,
                "type": {
                  "name": "SomeParametrizedType",
                  "types": [
                    {
                      "kind": 2,
                      "type": {
                        "name": "Either",
                        "types": [
                          {
                            "kind": 0,
                            "type": 2,
                          },
                          {
                            "kind": 0,
                            "type": 1,
                          },
                        ],
                      },
                    },
                    {
                      "kind": 3,
                      "type": {
                        "name": "Map",
                        "types": [
                          {
                            "kind": 3,
                            "type": {
                              "name": "Set",
                              "types": [
                                {
                                  "kind": 0,
                                  "type": 2,
                                },
                              ],
                            },
                          },
                          {
                            "kind": 2,
                            "type": {
                              "name": "Either",
                              "types": [
                                {
                                  "kind": 3,
                                  "type": {
                                    "name": "Set",
                                    "types": [
                                      {
                                        "kind": 0,
                                        "type": 2,
                                      },
                                    ],
                                  },
                                },
                                {
                                  "kind": 3,
                                  "type": {
                                    "name": "Set",
                                    "types": [
                                      {
                                        "kind": 0,
                                        "type": 1,
                                      },
                                    ],
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
            },
          ],
          "name": "TestParametrizedTypes",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 5,
                "type": {
                  "kind": 5,
                  "type": {
                    "kind": 5,
                    "type": {
                      "kind": 0,
                      "type": 2,
                    },
                  },
                },
              },
            },
          ],
          "name": "TestTypeCombinations",
          "parameters": [],
          "returnType": {
            "kind": 5,
            "type": {
              "kind": 5,
              "type": {
                "kind": 2,
                "type": {
                  "name": "Either",
                  "types": [
                    {
                      "kind": 0,
                      "type": 1,
                    },
                    {
                      "kind": 6,
                      "type": {
                        "key": {
                          "kind": 0,
                          "type": 2,
                        },
                        "value": {
                          "kind": 0,
                          "type": 1,
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
        },
        {
          "arguments": [],
          "name": "TestFunctionReturningRecord",
          "parameters": [],
          "returnType": {
            "kind": 1,
            "type": "TestRecord",
          },
        },
        {
          "arguments": [],
          "name": "TestFunctionReturningEnum",
          "parameters": [],
          "returnType": {
            "kind": 1,
            "type": "TestEnum",
          },
        },
      ],
      "name": "TestModule",
      "properties": [],
      "props": [],
      "views": [
        {
          "asyncFunctions": [],
          "classes": [],
          "constants": [],
          "constructor": null,
          "events": [
            "onEvent1",
            "onEvent2",
            "onEvent3",
            "onEvent4",
          ],
          "functions": [],
          "name": "ExpoWebView",
          "properties": [],
          "props": [
            {
              "arguments": [
                {
                  "name": "view",
                  "type": {
                    "kind": 0,
                    "type": 6,
                  },
                },
                {
                  "name": "testProp",
                  "type": {
                    "kind": 1,
                    "type": "URL",
                  },
                },
              ],
              "name": "testProp",
            },
          ],
          "views": [],
        },
      ],
    },
  ],
  "records": [
    {
      "fields": [
        {
          "name": "basicString",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "name": "basicStringInitialized",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "name": "basicIntInferred",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "basicDoubleInferred",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "basicStringInferred",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "name": "enumInferred",
          "type": {
            "kind": 1,
            "type": "TestEnum",
          },
        },
        {
          "name": "complexEnumInferred",
          "type": {
            "kind": 1,
            "type": "TestEnum",
          },
        },
        {
          "name": "recordInferred",
          "type": {
            "kind": 1,
            "type": "TestRecord2",
          },
        },
        {
          "name": "optionalInt",
          "type": {
            "kind": 4,
            "type": {
              "kind": 0,
              "type": 2,
            },
          },
        },
        {
          "name": "letDoubleBinding",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "fieldWithoutAnnotation",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
      ],
      "name": "TestRecord",
    },
    {
      "fields": [
        {
          "name": "field1",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "field2",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
      ],
      "name": "TestRecord2",
    },
  ],
  "typeParametersCount": Map {
    "SomeParametrizedType" => 2,
    "Map" => 2,
    "Set" => 1,
  },
  "usedTypeIdentifiers": Set {
    "TestEnum",
    "TestRecord2",
    "UnresolvedType",
    "SomeParametrizedType",
    "Map",
    "Set",
    "TestRecord",
    "URL",
  },
}
`;
